--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    background-color: #0D1117;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+}
